--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   cached_network_image:
   flutter_cache_manager: ^3.3.0
   plugin_platform_interface: ^2.1.2
+  logger:
+  google_fonts:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
