--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   logger:
   google_fonts:
   bouncing_widget:
+  focus_detector:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -74,7 +75,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/data/dummy_data.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
