--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,24 +30,19 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: "^0.9.2"
-  flutter_launcher_name:
-    git:
-      url: https://github.com/ride4sun/flutter_launcher_name
-      ref: "0.9.1"
+  flutter_app_name: ^0.1.0
   flutter_native_splash: ^2.0.2
   uuid:
   flutter_hooks:
   flutter_riverpod:
   hooks_riverpod:
-  image_picker:
   path_provider:
-  cached_network_image:
-  flutter_cache_manager: ^3.3.0
   plugin_platform_interface: ^2.1.2
   logger:
   google_fonts:
   bouncing_widget:
   focus_detector:
+  gallery_saver:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,7 +61,8 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_app_name:
+  name: "Meme Generator"
 # The following section is specific to Flutter packages.
 flutter:
   # The following line ensures that the Material Icons font is
